nginx/ingress-codex-a-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codex-a-1-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - dezamacona.net
      secretName: codex-a-1-tls
  rules:
    - host: dezamacona.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codex-a-1-service
                port:
                  number: 3000
